--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,34 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* LAYOUT STYLES, NAVIGATION STYLES & FONT */
+
+@font-face {
+  font-family: "Comfortaa";
+  src: url("./assets/fonts/Comfortaa.ttf");
+}
+
+main {
+  @apply min-h-screen py-20 font-Arial bg-background;
+}
+
+.top_nav {
+  @apply px-24 py-3 text-3xl not-italic font-semibold bg-no-repeat bg-cover select-none font-Comfortaa bg-topNavImage;
+}
+
+.mid_nav {
+  @apply flex items-center justify-between px-24 py-6 select-none bg-background;
+}
+
+.searchBar {
+  @apply w-[250px] border-mosaicBorderGray rounded-[8px] px-[6px] py-[10px] shadow-sm sm:text-sm;
+}
+
+.bottom_nav {
+  @apply flex justify-center py-3 bg-background;
+}
+
+.nav_links {
+  @apply flex gap-12 font-bold uppercase;
+}
