--- a/client/src/styles/Form.css
+++ b/client/src/styles/Form.css
@@ -7,7 +7,7 @@ textarea {
 }
 
 .form {
-  @apply mx-auto w-fit;
+  @apply w-full;
 }
 
 .formLabel {
@@ -15,7 +15,7 @@ textarea {
 }
 
 .formInput {
-  @apply py-[10px] px-4 border rounded-[8px] bg-mosaicLightGray border-mosaicBorderGray text-mosaicDarkGray text-xs focus:ring-mosaicDarkGray focus:border-mosaicBorderGray w-fit;
+  @apply py-[8px] px-4 border rounded-[8px] bg-mosaicLightGray border-mosaicBorderGray text-mosaicDarkGray text-xs focus:ring-mosaicDarkGray focus:border-mosaicBorderGray;
 }
 
 .formTextArea {
