Created connection button
Co-authored-by: paramighty <paramighty@users.noreply.github.com>
Co-authored-by: Jonathan Zeray <JonathanZeray@users.noreply.github.com>

--- a/client/src/components/InfoTile/TileWrapper.css
+++ b/client/src/components/InfoTile/TileWrapper.css
@@ -7,5 +7,5 @@
 }
 
 .divider {
-  @apply;border-[0.5px] bg-mosaicLineGray opacity-25 w-[1240px] mx-auto;
+  @apply border-[0.5px] bg-mosaicLineGray opacity-25 w-[1240px] mx-auto;
 }
