Finished design of all dashboard tiles
Co-authored-by: paramighty <paramighty@users.noreply.github.com>
Co-authored-by: Jonathan Zeray <JonathanZeray@users.noreply.github.com>

Co-authored-by: Isabelle Khan <mahk-06@hotmail.com>

--- a/client/src/components/CreateTile/CreateTile.css
+++ b/client/src/components/CreateTile/CreateTile.css
@@ -3,9 +3,8 @@
 @tailwind utilities;
 
 .createTile {
-  @apply relative w-[354px] font-Arial h-[65px] text-2xl rounded-[12px] p-4 drop-shadow-lg bg-mosaicWhite;
+  @apply relative w-[354px] font-Arial h-[65px] text-xl rounded-[12px] p-4 drop-shadow-lg bg-mosaicWhite flex justify-center items-center;
 }
-
-.PlusIcon {
-  @apply absolute top-[-40px] right-[19px];
+.create_tile_title {
+  @apply mr-10;
 }
