Moved navbar from nav into dashboard

--- a/client/src/components/InfoTile/TileWrapper.css
+++ b/client/src/components/InfoTile/TileWrapper.css
@@ -3,9 +3,5 @@
 @tailwind utilities;
 
 .tile_container {
-  @apply flex justify-center flex space-x-24 mb-[50px];
-}
-
-.divider {
-  @apply border-[0.5px] bg-mosaicLineGray opacity-25 w-[1240px] mx-auto;
+  @apply flex justify-center flex space-x-24 mb-[50px] mt-[130px];
 }
