--- a/client/src/styles/Form.css
+++ b/client/src/styles/Form.css
@@ -7,11 +7,11 @@ textarea {
 }
 
 .form {
-  @apply w-full;
+  @apply flex flex-wrap justify-start gap-3;
 }
 
 .formLabel {
-  @apply block my-2 text-xs font-medium text-mosaicBlack;
+  @apply block my-2 mr-3 text-xs font-medium text-mosaicBlack;
 }
 
 .formInput {
@@ -19,9 +19,9 @@ textarea {
 }
 
 .formTextArea {
-  @apply py-[10px] px-4 border rounded-[8px] bg-mosaicLightGray border-mosaicBorderGray text-mosaicDarkGray text-xs focus:ring-mosaicDarkGray focus:border-mosaicBorderGray w-full;
+  @apply w-96 py-[10px] px-4 border rounded-[8px] bg-mosaicLightGray border-mosaicBorderGray text-mosaicDarkGray text-xs focus:ring-mosaicDarkGray focus:border-mosaicBorderGray;
 }
 
 .formSelect {
-  @apply bg-mosaicLightGray border border-mosaicBorderGray text-mosaicDarkGray text-sm rounded-lg focus:ring-mosaicLightGray focus:border-mosaicBorderGray w-full p-2.5;
+  @apply min-w-[180px] py-[6px] bg-mosaicLightGray border border-mosaicBorderGray text-mosaicDarkGray text-sm rounded-lg focus:ring-mosaicLightGray focus:border-mosaicBorderGray;
 }
