--- a/client/src/components/InfoTile/TileWrapper.css
+++ b/client/src/components/InfoTile/TileWrapper.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 .tile_container {
-  @apply flex justify-center flex space-x-24 mb-[50px] mt-[130px];
+  @apply flex justify-center space-x-24 mb-[50px] mt-[130px];
 }
